added figures and completed chapter 6

--- a/7-DivaError.tex
+++ b/7-DivaError.tex
@@ -54,7 +54,7 @@ covariance of data points ($\mathbf{g}(\mathbf{r})$) with the point in which the
 Thus for anisotropic cases, the hybrid error field can provide incoherent results. This is what motivated the evaluation of the real covariance function in \diva.
 
 
-\subsection{The real covariance method}
+\subsection{The real covariance method\label{sec:realcovariance}}
 %--------------------------------------
 
 If we look back at the OI interpretation, we can place a data of value $1$ at location $\vect{r}$ and compute the analysis $\varphi_1(\vect{r}^\prime)$ at a location $\vect{r}^\prime$:
