--- a/8-DivaConstraints.tex
+++ b/8-DivaConstraints.tex
@@ -270,7 +270,7 @@ Poor man error field is really bad for these cases.
 
 
 %-------------------------------------------------------
-\section{Detrending data by defining groups and classes}
+\section{Detrending data by defining groups and classes\label{sec:detrending}}
 %-------------------------------------------------------
 
 When analysing climatological data, one is very often faced with data sets that have heterogeneous coverage in time and/or in space. This can lead to misinterpretations of the analysis, if for example there have been much more measurements during a specially warm year than during other years. It is also not uncommon that there are much less cruise data sets in stormy periods than in calm periods. \index{Detrending}
@@ -281,6 +281,7 @@ A \textit{group} is simply one way of subdividing the data into different member
 the classes are 1995, 1996, 1997 if we are looking at this period. Another group could be based on seasons and classes could be winter, spring, summer and autumn.
 
 \subsection{Theory}
+%------------------
 
 In the function to be minimised by \diva, there is a data-analysis misfit term :
 \begin{equation}
