--- a/0-DivaHeader2012.tex
+++ b/0-DivaHeader2012.tex
@@ -187,7 +187,7 @@ literate={\$}{{\textcolor{red}{\$}}}1
 % new kind of floating
 %-------------------------------------
 \floatstyle{boxed} 
-\newfloat{exfile}{htbp}{exf}[section]
+\newfloat{exfile}{htbp}{exf}[chapter]
 \floatname{exfile}{Example file}
 % ------------------------------------------------
 
